# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.22.8
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Fix non-casting of rend() -> reverse_const_iterator on some systems,
	  see http://bugs.gentoo.org/show_bug.cgi?id=354071
	- Set always default search field, even if string is unspecified
	- Introduce ACCEPT_KEYWORDS_AS_ARCH=full and make it default, see
	  http://bugs.gentoo.org/show_bug.cgi?id=353562
	- Also add ./configure --with-always-accept-keywords
	- Remove --with-rst and ship *.html in tarball, see
	  http://bugs.gentoo.org/show_bug.cgi?id=353705
	- Add --with-extra-doc and install by default nothing from doc

*eix-0.22.7
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Add option -f to eix-installed-after
	- Fix segfault for tests beginning with --end, see
	  http://bugs.gentoo.org/show_bug.cgi?id=350321
	- Minor fixes in zsh-completion
	- Avoid casting away const to be compatible with future C++ standard;
	  this goes at the cost of making many arguments non-const Package *

*eix-0.22.6
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Add some experimental zsh-completion
	- eix-sync: New option -V, cancel -m, fix description of -u
	- eix-test-obsolete: Output {,accept_}keywords instead of keywords:
	  http://bugs.gentoo.org/show_bug.cgi?id=349352
	- Honour order of {,accept_}keywords
	- Use largefile support if available
	- Fix minor variable and manpage description issues
	- No longer support translations for true/yes/on in variable names
	- Make code c++0x clean

*eix-0.22.5
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Fix mask syntax if slots and repositories are used in the same mask,
	  see http://forums.gentoo.org/viewtopic-p-6479886.html
	- Fix NONEXISTENT_IF_MASKED (check not only keywords but also mask)
	- manpage: Explain logic of EXPRESSION more verbosely.
	- Divide memory usage of global*.cc during compiling more even.

*eix-0.22.4
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>: