@@ -26,6 +26,7 @@ David Held <andukar at andukar.org>
 Andrew Keyser <legoguy at turbogfx.net> (documentation)
 KIMURA Masaru / hiyuh <hiyuh.root at gmail.com>
 Seemant Kulleen <seemant at gentoo.org>
+Tom Lloyd <napalmllama at gmail.com>
 Leonardo Valeri Manera <l.valerimanera at gmail.com>
 Cyrille Mescam <titi at oboulo.com>
 Mark J. Olah <mjo at cs.unm.edu>
